# ema

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: main.yml
colab_notebooks/: ema_HCN1_variants_example.ipynb  ema_ion_channel_proteins_example.ipynb  ema_tool_application_example.ipynb
configs/: agg_ids.json  split_ids.json
ema/: HCN1-variants-example.ipynb  ema.py  ema_example.ipynb  ion-channel-proteins-example.ipynb  test.py  utils.py
examples/HCN1-variants/: metadata.csv
examples/ion-channel-proteins/: esm1b_t33_650M_UR50S-embeddings.npy  esm1v_t33_650M_UR90S_1-embeddings.npy  esm2_t30_150M_UR50D-embeddings.npy  esm2_t33_650M_UR50D-embeddings.npy  metadata.csv  t5_u50.npy
scripts/: SpaceP.py  agg.py  eval-potassium.py  eval.py  eval_old.py  get-esm-emb.py  split.py  utils.py
