[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ema-emb"]

[project]
name = "ema-emb"
version = "0.0.1"
authors = [
  { name="Francesca Rissom", email="francesca.rissom@hpi.de" },
  { name="Paulo Yanez Sarmiento", email="paul.yanze@hpi.de" },
  { name="Jordan Safer", email="jsafer@broadinstitute.org" }
]
description = "A library for comparing embedding spaces"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy==1.24.4",
    "pandas==2.0.3",
    "plotly==5.21.0",
    "scikit_learn==1.3.2",
    "scipy==1.13.1",
    "umap_learn==0.5.6",
    "jupyter==1.0.0",
]

[project.urls]
Homepage = "https://github.com/pia-francesca/ema"
Issues = "https://github.com/pia-francesca/ema/issues"
